revision 44 - 20100724                                      |
libspeedtest:                                               |
  * Improved max scaling algorithm for the download charts  |
  * Updated embedded resources' hostlist to 201007220909    |
                                                            |
QSpeedTest:                                                 |
  * Prevent exiting the application via Window Manager's    |
    "X" button or the File > Exit menuitem when a test is   |
    still in progress                                       |


revision 43 - 20100723                                      |
QSpeedTestCLI:                                              |
  * IT'S BACK!                                              |
                                                            |
libspeedtest:                                               |
  * Fixed a bug that caused ugly X-axis result in Google    |
    Charts for download groups with speeds exceeding the    |
    ADSL2+ threshold                                        |
  * Fixed a bug that caused a problem in the X-axis scaling |
    in Google Charts for download groups                    |
  * Fixed a bug that caused an extraneous empty column in   |
    the bbCode output, when posted                          |
                                                            |
QSpeedTest:                                                 |
  * Enabled horizontal scroll bar in the QPlainTextEdit     |
    widget of the results + a work-around to deal with the  |
    cancellation of the autoscrolling when the horizontal   |
    scrollbar is enabled                                    |
  * "Copy plain text report to clipboard" now copies the    |
  complete contents of the QPlainTextEdit widget. Until now |
  it missed the detailed ping and download results. It was  |
  not by design, I just completely forgot about it! :P      |


revision 42 - 20100720                                          |